tests/snapshots/app__question_type_mismatch.snap
---
source: tests/app.rs
expression: "render(&mut a, 80, 24)"
---
┌ /snap/left ──────────────────────────┐┌ /snap/right/with a long name ────────┐
│Name                  Size Modified   ││Name                  Size Modified   │
│ ..                   <UP>            ││ ..                   <UP>            │
│ .config             <DIR> 09-22 14:13││ only                    7 09-21 14:13│
│ src                 <DIR> 09-21 14:13││                                      │
│ -leading                2 09-27 14:13││                                      │
│ bad\xff\xfeutf8         4 09-29 14:13││                                      │
│ ┌ Type mismatch ───────────────────────────────────────────────────────────┐ │
│▸│/snap/dst/report.pdf                                                      │ │
│ │new     : directory, 2026-09-21 14:13:20                                  │ │
│ │existing: 5 bytes, 2026-05-28 20:26:40                                    │ │
│ │A directory never replaces a file, and a file never replaces a directory. │ │
│ │                                                                          │ │
│ │[ Skip ] [ Skip all ] [ Rename ] [ Cancel job ]                           │ │
│ └──────────────────────────────────────────────────────────────────────────┘ │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└ 1 marked, 97.7K, 123.0G free ────────┘└ 1 entry, 123.0G free ────────────────┘
/snap/left$                                                                     
F1Help  F2      F3View  F4Edit  F5Copy  F6Move  F7Mkdir F8Trash F9      F10Quit
